とりあえずhomeがでるところまで

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
 version: "3.8"
 
 services:
-  app:
-    build: 
-      context: .
-      dockerfile: ./Dockerfile
-    volumes:
-      - ./laravel:/var/www/html/
   web:
     build: 
-      context: ./docker/nginx
-      dockerfile: Dockerfile
-
+      context: .
+      dockerfile: docker/nginx/Dockerfile
     ports:
-      - "8000:80"
+      - 8000:80
     depends_on:
       - app
 
+  app:
+    build: 
+      context: .
+      # 開発時だけ有効にしたい
+    volumes:
+      - ./laravel:/var/www/html
