--- a/infrastructure/app/package.json
+++ b/infrastructure/app/package.json
@@ -26,6 +26,7 @@
     "@aws-cdk/aws-ecs": "^1.70.0",
     "@aws-cdk/aws-ecs-patterns": "^1.70.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.70.0",
+    "@aws-cdk/aws-iam": "^1.70.0",
     "@aws-cdk/aws-logs": "^1.70.0",
     "@aws-cdk/aws-s3": "^1.70.0",
     "@aws-cdk/core": "1.70.0",
